<resources>
    <string name="app_name">HockeyApplication</string>
    <string name="hockey_hint_username">Username</string>
    <string name="hockey_hint_password">Password</string>
    <string name="hockey_button_login">Login</string>
    <string name="hockey_button_register">Register</string>
    <string name="hockey_button_reset_password">Reset Password</string>
    <string name="user_menu_header">Admin Menu</string>
    <string name="hockey_hint_email">Email address</string>
    <string name="hockey_hint_name">Name</string>
    <string name="hockey_hint_surname">Surname</string>

    <!--Activity and Fragment titles-->
    <string name="title_activity_main">Admin Menu</string>
    <string name="title_activity_roles">Set Roles</string>
    <string name="fragment_teams_title">Teams</string>
    <string name="fragment_opponents_title">Opponents</string>
    <string name="title_activity_teams_opponents">Teams and Opponents</string>
    <string name="title_activity_add_team">Add Team</string>
    <string name="title_activity_add_opponent">Ad dOpponent</string>
    <string name="title_activity_select_team">Select TeamA</string>
    <string name="title_activity_move_players">Move Players</string>
    <string name="title_activity_medical_info">Medical Info</string>
    <string name="title_activity_add_player">Add Player</string>
    <string name="title_activity_select_player">Select Player</string>
    <string name="title_activity_select_opponent">Select Opponent</string>
    <string name="title_activity_select_user">Select User</string>
    <string name="title_activity_my_players">My Players</string>
    <string name="title_activity_player_info">Player Info</string>
    <string name="title_activity_set_role">Set Role</string>
    <string name="title_activity_edit_player">Edit Player</string>
    <string name="title_activity_coach_menu">Coach Menu</string>
</resources>
